--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Details.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Details.cshtml
@@ -50,26 +50,78 @@
             <div class="border rounded p-3 bg-light">@Html.Raw(Model.MoTa)</div>
         </div>
 
-        <div>
-            <h4 class="text-primary"><i class="fa-solid fa-paperclip me-1"></i> Tệp Đính Kèm</h4>
-            @if (Model.LopHocAttachments.Any())
+        <div class="mt-4">
+            <h5 class="text-primary"><i class="fa-solid fa-paperclip"></i> Tệp Đính Kèm</h5>
+            @if (Model.LopHocAttachments != null && Model.LopHocAttachments.Any())
             {
-                <ul class="list-group mt-3">
-                    @foreach (var attachment in Model.LopHocAttachments)
-                    {
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a href="@Url.Content(attachment.Attachment.FilePath)" target="_blank">
-                                <i class="fa-solid fa-file me-2"></i>@attachment.Attachment.FileName
-                            </a>
-                            <span class="badge bg-primary">@attachment.Attachment.FileType</span>
-                        </li>
+                var fileGroups = Model.LopHocAttachments
+                    .GroupBy(a => a.Attachment.FileType?.ToLower())
+                    .ToList();
+
+                <div class="accordion" id="accordionFiles">
+                    @{
+                        int index = 0;
+                        foreach (var group in fileGroups)
+                        {
+                            var fileType = group.Key.ToUpper();
+                            var collapseId = $"collapse{index}";
+                            var headingId = $"heading{index}";
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="@headingId">
+                                    <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#@collapseId"
+                                            aria-expanded="false" aria-controls="@collapseId">
+                                        📁 @fileType
+                                    </button>
+                                </h2>
+                                <div id="@collapseId" class="accordion-collapse collapse"
+                                     aria-labelledby="@headingId" data-bs-parent="#accordionFiles">
+                                    <div class="accordion-body">
+                                        <div class="row">
+                                            @foreach (var attachment in group)
+                                            {
+                                                var filePath = Url.Content(attachment.Attachment.FilePath);
+                                                var fileName = attachment.Attachment.FileName;
+                                                var ext = group.Key;
+
+                                                if (ext == "jpg" || ext == "png" || ext == "jpeg")
+                                                {
+                                                    <div class="col-md-3 mb-3">
+                                                        <div class="card h-100">
+                                                            <img src="@filePath" class="card-img-top img-fluid" alt="@fileName" />
+                                                            <div class="card-body p-2 text-center">
+                                                                <a href="@filePath" target="_blank" class="btn btn-sm btn-outline-primary">Xem ảnh</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                }
+                                                else
+                                                {
+                                                    <div class="col-md-12 mb-2">
+                                                        <div class="list-group-item d-flex justify-content-between align-items-center">
+                                                            <div class="text-truncate" style="max-width: 70%;">
+                                                                <i class="fas fa-file me-2"></i>
+                                                                <a href="@filePath" target="_blank" title="@fileName">@fileName</a>
+                                                            </div>
+                                                            <span class="badge bg-secondary">@ext.ToUpper()</span>
+                                                        </div>
+                                                    </div>
+                                                }
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            index++;
+                        }
                     }
-                </ul>
+                </div>
             }
             else
             {
-                <div class="alert alert-info mt-3">Không có tệp đính kèm</div>
+                <div class="alert alert-info">Không có tài liệu</div>
             }
+
         </div>
     </div>
 
